--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ a {
   display: flex;
   flex-direction: column;
   background-color: #7b2d26;
-  width: 60%;
+ /* width: 60%;*/
   padding: 10px;
   border-radius: 10px;
   align-items: center;
