--- a/style.css
+++ b/style.css
@@ -46,3 +46,19 @@ a {
   align-items: center;
   padding: 10px;
 }
+
+.photo-box {
+  margin-top: 20px;
+  display: flex;
+  flex-direction:column;
+  background-color: #7b2d26;
+  width: 60%;
+  padding: 10px;
+  border-radius: 10px;
+  align-items: center;
+}
+
+.photo-box img {
+  width: 90%;
+  padding: 10px;
+}
