--- a/projects/rps/style.css
+++ b/projects/rps/style.css
@@ -1,26 +1,41 @@
 body {
-  background-color: teal;
+  background-color: darkblue;
+  width: 700px;
+  margin: auto;
+}
+
+h1 {
+  color: darkorange;
 }
 
 button {
-  width: 300px;
-  height: 300px;
+  width: 100px;
+  height: 100px;
+  background-color: blue;
+  color: white;
+  border-color: orange;
+}
+
+p {
+  color: white;
 }
 
 h3 {
-  color: lightblue;
+  color: darkorange;
 }
 
 #results {
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 200px;
 }
 
 #score {
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 150px;
 }
 
 #winner {
@@ -32,9 +47,11 @@ h3 {
 .header-container {
   display: flex;
   justify-content: center;
+  height: 150px;
 }
 
 .button-container {
   display: flex;
   justify-content: space-around;
+  height: 200px;
 }
