--- a/style.css
+++ b/style.css
@@ -100,6 +100,10 @@ a {
 }
 
 @media (max-width: 1000px) {
+  html {
+    font-size: 20px;
+  } 
+
   .box {
     all: unset;
     margin-top: 20px;
