--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 html {
-  background-color: #2b3a67;
-  color: #452103;
-  font-family: georgia, serif;
+  background-color: #000000;
+  color: #000000;
+  font-family: "Times New Roman";
+  color: #FFFFFF;
 }
 
 h1 {
-  color: #fffd82;
+  color: #FFFFFF;
 }
 
 .enwiden {
@@ -26,7 +27,7 @@ h1 {
 
 a {
   text-decoration: none;
-  color: #fffd82;
+  color: #FFFFFF;
   font-weight: bold;
   padding-right: 25px;
   padding-left: 25px;
@@ -36,11 +37,17 @@ a {
   margin-top: 20px;
   display: flex;
   flex-direction: column;
-  background-color: #fffd82;
+  background-color: #000000;
+  border-color: #FFFFFF;
+  border-style: solid;
+  border-width: 1px;
   width: 60%;
   max-width: 560px;
-  padding: 10px;
-  border-radius: 10px;
+  padding-top: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 20px;
+  border-radius: 5px;
   align-items: center;
 }
 
@@ -48,7 +55,7 @@ a {
   margin-top: 20px;
   display: flex;
   flex-direction: column;
-  background-color: #fffd82;
+  background-color: #000000;
   width: 60%;
   padding: 10px;
   border-radius: 10px;
@@ -64,14 +71,18 @@ a {
 
 .box a {
   padding: 10px;
-  color: #452103;
 }
 
 .box h1 {
-  color: #452103;
+  color: #000000;
 }
 
 .box img {
+  width: 90%;
+  padding: 10px;
+}
+
+#wet-pet {
   width: 40%;
   padding: 10px;
 }
@@ -99,7 +110,7 @@ a {
   padding: 10px;
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 800px) {
   html {
     font-size: 28px;
   } 
@@ -117,3 +128,7 @@ a {
     align-items: center;
   } 
 }
+
+p {
+  color: #FFFFFF;
+ } 
