--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 html {
-  background-color: #000000;
-  color: #000000;
+  --bgc: #F1F1F1;
+  --tc: #DD8920;
+  background-color: var(--bgc);
+  color: var(--tc);
   font-family: "Times New Roman";
-  color: #FFFFFF;
 }
 
 h1 {
-  color: #FFFFFF;
+  color: var(--tc);
 }
 
 .enwiden {
@@ -27,7 +28,7 @@ h1 {
 
 a {
   text-decoration: none;
-  color: #FFFFFF;
+  color: var(--tc);
   font-weight: bold;
   padding-right: 25px;
   padding-left: 25px;
@@ -37,10 +38,10 @@ a {
   margin-top: 20px;
   display: flex;
   flex-direction: column;
-  background-color: #000000;
-  border-color: #FFFFFF;
+  background-color: var(--bgc);
+  border-color: var(--tc);
   border-style: solid;
-  border-width: 1px;
+  border-width: 2px;
   width: 60%;
   max-width: 560px;
   padding-top: 10px;
@@ -55,7 +56,7 @@ a {
   margin-top: 20px;
   display: flex;
   flex-direction: column;
-  background-color: #000000;
+  background-color: var(--bgc);
   width: 60%;
   padding: 10px;
   border-radius: 10px;
@@ -130,5 +131,5 @@ a {
 }
 
 p {
-  color: #FFFFFF;
+  color: var(--tc);
  } 
