--- a/projects/etch/style.css
+++ b/projects/etch/style.css
@@ -21,3 +21,19 @@ background-color: #CD7F32;
   content: '';
   display: block;
   padding-top: 100%;
+
+button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+.button:hover {
+  background-color: #4CAF50; /* Green */
+  color: white;
+}
