--- a/style.css
+++ b/style.css
@@ -23,3 +23,10 @@ ul {
   padding: 0; /* Remove padding */
   margin: 0; /* Remove margins */
 }
+
+.recipe-ul {
+  list-style-type: square;
+  padding-left: 2.5em;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
