giving up on mobile for now

--- a/assets/style.css
+++ b/assets/style.css
@@ -47,11 +47,10 @@ ul {
 	height: 31px;
 	width: 88px;
 }
-
+/*
 @media (max-width:801px) {
 	body {
 		width: 100%;
-		position: absolute;
-		background-color: red;
 }
 }
+*/
