--- a/assets/style.css
+++ b/assets/style.css
@@ -30,6 +30,11 @@ table {
 td, th {
   text-align: center;
   padding: 8px;
+  word-wrap: break-word:
+}
+
+tr {
+  font-size: 1.5vh;
 }
 
 tr:nth-child(even) {
