--- a/assets/style.css
+++ b/assets/style.css
@@ -11,7 +11,7 @@ html {
   color: var(--tc);
   font-family: 'Nunito', sans-serif;
   text-align: center;
-  font-size: 3vw;
+  font-size: 3vh;
 }
 
 .whisper {
@@ -34,7 +34,7 @@ td, th {
 }
 
 tr {
-  font-size: 5vw;
+  font-size: 3vh;
 }
 
 tr:nth-child(even) {
@@ -59,7 +59,8 @@ tr:nth-child(odd) {
 h1 {
   font-weight: 700;
   font-size: 2.25rem;
-  line-height: 2.5rem;
+  padding: 0px;
+  margin: 0.5rem;;
 }
 
 a {
@@ -97,7 +98,7 @@ ul {
 }
 
 .navbar {
-  font-size: 5vw;
+  font-size: 4vh;
   line-height: 2.75rem;
   margin-bottom: 2rem;
   word-spacing: 0.5rem;
