--- a/assets/style.css
+++ b/assets/style.css
@@ -11,7 +11,7 @@ html {
   color: var(--tc);
   font-family: 'Nunito', sans-serif;
   text-align: center;
-  font-size: 3vh;
+  font-size: 2.5vh;
 }
 
 .whisper {
@@ -34,7 +34,7 @@ td, th {
 }
 
 tr {
-  font-size: 3vh;
+  font-size: 2.5vh;
 }
 
 tr:nth-child(even) {
@@ -58,9 +58,10 @@ tr:nth-child(odd) {
 
 h1 {
   font-weight: 700;
-  font-size: 2.25rem;
+  font-size: 5vh;
   padding: 0px;
-  margin: 0.5rem;;
+  margin: 0;
+  max-width: 100%;
 }
 
 a {
@@ -98,10 +99,11 @@ ul {
 }
 
 .navbar {
-  font-size: 4vh;
+  font-size: 3vh;
   line-height: 2.75rem;
-  margin-bottom: 2rem;
+  margin-bottom: 1vh;
   word-spacing: 0.5rem;
+  max-width: 100%;
 }
 
 .navbar a {
