--- a/assets/style.css
+++ b/assets/style.css
@@ -80,12 +80,14 @@ img {
   margin-bottom: 3vh;
 }
 
+/*
 .shrinkwrap img {
   height: auto;
   width: auto;
   max-height: 60vh;
   max-width: 80%;
 }
+*/
 
 /*
 img {
