--- a/assets/style.css
+++ b/assets/style.css
@@ -81,10 +81,10 @@ img {
 }
 
 .shrinkwrap img {
-  height: auto;
-  width: auto;
-  max-height: 60vh;
-  max-width: 80%;
+  width: 40%;
+  min-width: 50vh;
+  max-width: 100%;
+  margin: auto;
 }
 
 .photodiv .album {
