--- a/assets/style.css
+++ b/assets/style.css
@@ -16,6 +16,12 @@ html {
   font-size: 2.25vh;
 }
 
+.datelist {
+  text-align: left;
+  width: max-content;
+  margin: auto;
+}
+
 .whisper {
   color: darkgray;
   font-style: italic;
@@ -114,21 +120,22 @@ img {
   aspect-ratio: auto;
   max-width: 90%;
   height: auto;
-  max-height:90vh;
+  max-height: 90vh;
   margin-bottom: 3vh;
-}
-
-.shrinkwrap img {
-  width: 40%;
-  min-width: 50vh;
-  max-width: 100%;
-  margin: auto;
 }
 
 .shrinkwrap2 img {
   width: 30%;
   min-width: 40vh;
-  max-width: 100%;
+  max-width: 40vh;
+  margin: auto;
+}
+
+.shrinkwrap img {
+  border-radius: 5px;
+  width: 40%;
+  min-width: 40vh;
+  max-width: 70vh%;
   margin: auto;
 }
 
